ipc/ipdl/test/ipdl/error/PCompressInvalid.ipdl
//error: invalid value for attribute `Compress', expected one of: None, all

include protocol compressCtor;

[ChildProc=any]
async protocol PCompressInvalid {
child:
    [Compress=Invalid] async Message();
};
